build: modernize build system, CI workflow, and add JUnit 5 test suite